<resources>
    <string name="app_name">Weather</string>
    <string name="cancel_label">Cancel</string>
    <string name="store_label">Store</string>
    <string name="license_title">License</string>
    <string name="libraries_title">Libraries &amp; Resources</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="design_api_title">Design &amp; API</string>
    <string name="application_info_title">Application Info</string>
    <string name="application_info_text">
        <![CDATA[
            <p>
            <b>Weather application</b>
            <br/>
            Version: %1$s
            <br/>
            This application is open source at <br/><a href="https://github.com/bkhezry/weather">https://github.com/bkhezry/weather</a></p>
        ]]>
    </string>
    <string name="developer_info_text" translatable="false">
        <![CDATA[
            <p>Behrouz Khezry <a href="https://twitter.com/bkhezry">@bkhezry</a></p>
        ]]>
    </string>
    <string name="design_api_text" translatable="false">
        <![CDATA[
            <p>
            <a href="https://www.uplabs.com/posts/weather-app-freebie">Weather App Freebie</a> by Raman Yv
            <br/>
            <a href="https://lottiefiles.com/user/26177">Lottie & Icon files</a> by jochang
            <br/>
            <a href="http://openweathermap.org/">OpenWeatherMap</a> Weather API
            </p>
        ]]>
    </string>
    <string name="license_text" translatable="false">
        <![CDATA[
            <p>Copyright 2019 Behrouz Khezry</p>
            <p>Licensed under the Apache License, Version 2.0 (the "License");
            you may not use this file except in compliance with the License.
            You may obtain a copy of the License at</p>
            <p>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
            <p>Unless required by applicable law or agreed to in writing, software
            distributed under the License is distributed on an "AS IS" BASIS,
            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            See the License for the specific language governing permissions and
            limitations under the License.</p>
        ]]>
    </string>
    <string name="libraries_text" translatable="false">
        <![CDATA[
           <p>
            <a href="https://github.com/JakeWharton/butterknife">ButterKnife</a> - Apache-2.0
            <br/>
            <a href="https://github.com/square/retrofit">Retrofit</a> - Apache-2.0
            <br/>
            <a href="https://github.com/ReactiveX/RxAndroid">RxAndroid</a> - Apache-2.0
            <br/>
            <a href="https://github.com/objectbox/objectbox-java">ObjectBox</a> - Apache-2.0
            <br/>
            <a href="https://github.com/mikepenz/FastAdapter">FastAdapter</a> - Apache-2.0
            <br/>
            <a href="https://github.com/bumptech/glide">Glide</a> - Apache-2.0
            <br/>
            <a href="https://github.com/airbnb/lottie-android">Lottie-Android</a> - Apache-2.0
            <br/>
            <a href="https://github.com/MiguelCatalan/MaterialSearchView">MaterialSearchView</a> - Apache-2.0
            <br/>
            <a href="https://github.com/pwittchen/prefser">Prefser</a> - Apache-2.0
            <br/>
            <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> - Apache-2.0
            <br/>
            <a href="https://github.com/InflationX/Calligraphy">Calligraphy</a> - Apache-2.0
            <br/>
            <a href="https://github.com/google/material-design-icons">Material design icons</a> - Creative Common Attribution 4.0 International License
           </p>

        ]]>
</string>
    <string name="current_label">Current</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
    <string name="next_4_days_hourly">Next 4 Days/Hourly</string>
    <string name="next_15_days_label">Next 15 Days</string>
    <string name="search_for_a_city_label">Search for a city</string>
    <string name="zero_label">0%d</string>
    <string name="wind_unit_label">%.0f km/hr</string>
    <string name="openweathermap_api_key_label">OpenWeatherMap API Key</string>
    <string name="api_key_description">For using application you should provide API key. It is free. Please open link below and create account. After that you can get API key.</string>
    <string name="get_api_key_label">Get API Key</string>
    <string name="api_key_label">API Key</string>
    <string name="english_label" translatable="false">English</string>
    <string name="persian_label" translatable="false">فارسی</string>
    <string name="search_label">Search</string>
    <string name="no_internet_message">Please check internet connection</string>
    <string name="no_city_found_message">No city found with this name</string>
    <string name="invalid_api_key_message">API key is invalid. Wait for next update</string>
    <string name="network_exception_message">Network connection problem</string>
    <string name="retry_label">Retry</string>
    <string name="ok_label">OK</string>
    <string name="night_mode_label">Night Mode</string>
    <string name="title_activity_nav">navActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="earth">Earthquake</string>
    <string name="safe">Safty Instructions</string>
    <string name="earth_sensoir">Earthquake Sensor</string>
    <string name="ask_help">Ask Help</string>

    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="disasters">Disasters</string>
    <string name="egy_disaster">Egypt Disasters History</string>

</resources>
